tests/errors/alfa/semantic_error2.alfa
//****Error semantico en lin X: Acceso a variable no declarada (<nombre_variable>).
main
{
    int x, y ;

 
    z=0;
}    